# ieeg_backend

./: .gitignore  README.md  demo_full_pipeline.py  pyproject.toml  requirements.txt  test_contracts_results.txt  test_ei_results.txt
plugins/features/: epileptogenicity_index.py
src/core/: data_manager.py  interfaces.py  sliding_window.py
src/core/base_models/: base_pytorch.py
tests/: conftest.py  test_contracts.py  test_data_manager.py  test_feature_extractors.py  test_memory_profiling.py  test_sliding_window.py
