[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ieeg_backend"
version = "0.1.0"
authors = [
  { name="Omar Ahmed Ahmed AbdAlAal", email="omar.m.abdalaal@gmail.com" },
]
description = "A powerful, memory-efficient backend for processing, filtering, and classifying huge continuous iEEG streams."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "mne>=1.5.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "pydantic>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
]
torch = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
